Test explicit disable_sequence_numbers and the version gate
Address review: cover that an explicit index.disable_sequence_numbers on a
standalone columnar index is preserved rather than overridden, and that
below the gating index version a standalone columnar index disables
sequence numbers.