@@ -1188,16 +1188,58 @@ public class MetadataCreateIndexServiceTests extends ESTestCase {
         );
     }
 
+    public void testColumnarDataStreamBackingIndexKeepsExplicitDisableSequenceNumbers() {
+        // The injection only applies when the setting is absent, so an explicit request value must win.
+        boolean explicit = randomBoolean();
+        assertThat(
+            "an explicit [index.disable_sequence_numbers] on a columnar data-stream backing index must be preserved, not overridden",
+            IndexSettings.DISABLE_SEQUENCE_NUMBERS.get(aggregateColumnarSettings("my-data-stream", IndexVersion.current(), explicit)),
+            equalTo(explicit)
+        );
+    }
+
+    public void testStandaloneColumnarIndexKeepsExplicitDisableSequenceNumbers() {
+        // The injection only fires for data streams, so an explicit value on a standalone columnar index is preserved untouched.
+        boolean explicit = randomBoolean();
+        assertThat(
+            "an explicit [index.disable_sequence_numbers] on a standalone columnar index must be preserved",
+            IndexSettings.DISABLE_SEQUENCE_NUMBERS.get(aggregateColumnarSettings(null, IndexVersion.current(), explicit)),
+            equalTo(explicit)
+        );
+    }
+
+    public void testStandaloneColumnarIndexBeforeGateDisablesSequenceNumbers() {
+        // Below the gating version the override does not apply and a standalone columnar index disables sequence numbers. The lower bound
+        // is where the columnar disable-by-default begins.
+        IndexVersion beforeGate = IndexVersionUtils.randomVersionBetween(
+            IndexVersions.DISABLE_SEQUENCE_NUMBERS,
+            IndexVersionUtils.getPreviousVersion(IndexVersions.COLUMNAR_DISABLE_SEQUENCE_NUMBERS_DATA_STREAMS_ONLY)
+        );
+        assertTrue(
+            "a standalone columnar index below the gating version disables sequence numbers",
+            IndexSettings.DISABLE_SEQUENCE_NUMBERS.get(aggregateColumnarSettings(null, beforeGate, null))
+        );
+    }
+
     private Settings aggregateColumnarSettings(@Nullable String dataStreamName) {
+        return aggregateColumnarSettings(dataStreamName, IndexVersion.current(), null);
+    }
+
+    private Settings aggregateColumnarSettings(
+        @Nullable String dataStreamName,
+        IndexVersion createdVersion,
+        @Nullable Boolean explicitDisableSequenceNumbers
+    ) {
         ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
             .putProjectMetadata(ProjectMetadata.builder(projectId).build())
             .build();
-        var request = new CreateIndexClusterStateUpdateRequest("create index", projectId, "idx", "idx").settings(
-            Settings.builder()
-                .put(IndexSettings.MODE.getKey(), IndexMode.COLUMNAR.getName())
-                .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
-                .build()
-        );
+        Settings.Builder indexSettings = Settings.builder()
+            .put(IndexSettings.MODE.getKey(), IndexMode.COLUMNAR.getName())
+            .put(IndexMetadata.SETTING_VERSION_CREATED, createdVersion);
+        if (explicitDisableSequenceNumbers != null) {
+            indexSettings.put(IndexSettings.DISABLE_SEQUENCE_NUMBERS.getKey(), explicitDisableSequenceNumbers);
+        }
+        var request = new CreateIndexClusterStateUpdateRequest("create index", projectId, "idx", "idx").settings(indexSettings.build());
         if (dataStreamName != null) {
             request.dataStreamName(dataStreamName);
         }
@@ -1210,7 +1252,7 @@ public class MetadataCreateIndexServiceTests extends ESTestCase {
             Settings.EMPTY,
             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS,
             randomShardLimitService(),
-            Collections.emptySet()
+            Set.of(new IndexMode.IndexModeSettingsProvider())
         );
     }
 
